--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 immo_data.csv
 outData.csv
+chemnitz.csv
 chemnitz_cleaned.csv
 chemnitz_regression_ready.csv
 chemnitz_cleaned_but_not_thermalChar.csv
